<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.imrhj.cowlevel.ui.activity.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/bg_welcome" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLoginBackground" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:animateLayoutChanges="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/slogan"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="55dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="40dp">

            <LinearLayout
                android:id="@+id/llRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="@drawable/ripple_button_foreground"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_account"
                    android:textColor="@color/colorWhite5"
                    android:textSize="16sp" />

                <View
                    android:id="@+id/viewRegister"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="6dp"
                    android:background="@android:color/white"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:focusable="true"
                android:foreground="@drawable/ripple_button_foreground"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_direct"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <View
                    android:id="@+id/viewLogin"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="6dp"
                    android:background="@android:color/white" />
            </LinearLayout>
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/etMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mail"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:theme="@style/TextLabel"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:lines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:gravity="center_horizontal"-->
            <!--android:layout_height="wrap_content">-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="注册即代表同意" />-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="《奶牛关使用协议与条款》" />-->

        <!--</LinearLayout>-->

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_button_red"
            android:foreground="@drawable/card_foreground"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvForget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/ripple_button_foreground"
            android:padding="12dp"
            android:text="@string/forget_password"
            android:textColor="@color/colorWhite3"
            android:textSize="14sp" />
    </LinearLayout>
</RelativeLayout>
